Fixed horizontal alignment issues for form on larger screens

--- a/style.css
+++ b/style.css
@@ -262,6 +262,7 @@ span {
 	position: absolute;
 	bottom: 10px;
 	display: flex;
+	width: 100%;
 	flex-direction: column;
 	align-items: center;
 	justify-content: space-between;
@@ -270,7 +271,9 @@ span {
 
 .inputs {
 	display: flex;
+	width: 100%;
 	justify-content: space-evenly;
+	align-items: center;
 	margin-bottom: 0.5rem;
 }
 
